--- a/templates/layout/partial/navigation/header.phtml
+++ b/templates/layout/partial/navigation/header.phtml
@@ -4,15 +4,15 @@
     */
 ?>
     <!-- Logo -->
-    <a href="<?=$this->url('dashboard');?>" class="logo">
+    <a href="<?=$this->url('home');?>" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
     <span class="logo-mini">
         <div class="center-block">
-            <img class="img-responsive center-block" src="<?=$this->basePath('/assets/site/images/icons/favicon-96x96.png');?>" width="45px">
+            <img class="img-responsive center-block" src="/assets/site/images/icons/favicon-96x96.png" width="45px">
         </div>
     </span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"> <?=$this->layout()->application_name;?> </span>
+      <span class="logo-lg"> iAccess </span>
     </a>
     <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-static-top">
