--- a/templates/layout/partial/navigation/sidebar.phtml
+++ b/templates/layout/partial/navigation/sidebar.phtml
@@ -4,7 +4,7 @@
         <!-- DIVIDER -->
         <li class="header">GENERAL OVERVIEW</li>
         <!-- END DIVIDER -->
-        <li><a href="<?php echo $this->url('dashboard'); ?>">
+        <li><a href="<?php echo $this->url('home'); ?>">
             <i class="fa fa-dashboard"></i> <span>Dashboard</span></a>
         </li>
 <!--        <li><a href="#">
@@ -37,7 +37,7 @@
         <!-- DIVIDER -->
         <li class="header">OFFICE OF THE REGISTRAR</li>
          <!--END DIVIDER--> 
-        <li class="active"><a href="<?=$this->url('student');?>">
+        <li class="active"><a href="<?=$this->url('home');?>">
             <i class="fa fa-group"></i> <span>Student</span></a>
         </li>
         <li class="active"><a href="#">
