--- a/templates/layout/partial/navigation/sidebar.phtml
+++ b/templates/layout/partial/navigation/sidebar.phtml
@@ -13,15 +13,15 @@
         <!-- DIVIDER -->
         <li class="header">REGISTRAR OFFICE</li>
         <!-- END DIVIDER -->
-        <li><a href="<?php echo $this->url('student-record');?>">
-            <i class="fa fa-users"></i> <span>Student Records</span></a>
+        <li><a href="<?php echo $this->url('student-list');?>">
+            <i class="fa fa-users"></i> <span>Student List</span></a>
         </li>
         <li><a href="<?php echo $this->url('course-offering');?>">
             <i class="fa fa-list-alt"></i> <span>Course Offering</span></a>
         </li>
-        <li><a href="<?php echo $this->url('class-scheduling');?>">
+<!--        <li><a href="<?php // echo $this->url('class-scheduling');?>">
             <i class="fa fa-calendar"></i> <span>Class Schedules</span></a>
-        </li>
+        </li>-->
         <li><a href="<?php echo $this->url('transcript');?>">
             <i class="fa fa-certificate"></i> <span>Class Records</span></a>
         </li>        
@@ -31,15 +31,17 @@
         <li><a href="<?php echo $this->url('tesda-report');?>">
             <i class="fa fa-gear"></i> <span>TRACER Report</span></a>
         </li>
-        <!-- DIVIDER -->
-        <li class="header">ACCOUNTING OFFICE</li>
-        <!-- END DIVIDER -->
+        
+        
+        <!-- Accounting Office Related Links -->
+<!--        <li class="header">ACCOUNTING OFFICE</li>        
         <li><a href="<?php echo $this->url('enrollment-billing');?>">
             <i class="fa fa-credit-card-alt"></i> <span>Enrollment Transactions</span></a>
-        </li>
-        <!-- DIVIDER -->
-        <li class="header">STUDENT ACCOUNT</li>
-        <!-- END DIVIDER -->
+        </li>-->
+        
+        
+        <!-- Student Account Related Links -->
+<!--        <li class="header">STUDENT ACCOUNT</li>
         <li><a href="<?php echo $this->url('student-profile');?>">
             <i class="fa fa-wrench"></i> <span>Profile Settings</span></a>
         </li>
@@ -51,39 +53,15 @@
         </li>
         <li><a href="<?php echo $this->url('student-grades');?>">
             <i class="fa fa-certificate"></i> <span>Evaluation of Grades</span></a>
-        </li>
-        <!-- DIVIDER -->
-        <li class="header">FACULTY/INSTRUCTOR ACCOUNT</li>
-        <!-- END DIVIDER -->
-        <li><a href="<?php echo $this->url('class-attendance');?>">
+        </li>-->
+        
+        <!-- Faculty Related Links -->
+<!--        <li class="header">FACULTY/INSTRUCTOR ACCOUNT</li>       
+        <li><a href="<?php // echo $this->url('class-attendance');?>">
             <i class="fa fa-hand-paper-o"></i> <span>Attendance</span></a>
         </li>
-        <li><a href="<?php echo $this->url('class-exams');?>">
+        <li><a href="<?php // echo $this->url('class-exams');?>">
             <i class="fa fa-list-alt"></i> <span>Examinations</span></a>
-        </li>
-<!--        <li class="treeview">
-            <a href="#">
-                <i class="fa fa-book"></i>
-                    <span>Class Record</span>
-                <i class="fa fa-angle-left pull-right"></i>
-            </a>
-            <ul class="treeview-menu">
-                <li><a href="#"><i class="fa fa-certificate"></i> Class Schedule </a></li>  
-                <li><a href="#"><i class="fa fa-hand-paper-o"></i> Student Attendance </a></li>
-                <li><a href="#"><i class="fa fa-check-square-o"></i> Student Grades </a></li>                                     
-            </ul>
-        </li>
-        <li class="treeview">
-            <a href="#">
-                <i class="fa fa-institution"></i>
-                    <span>Administrative Services</span>
-                <i class="fa fa-angle-left pull-right"></i>
-            </a>
-            <ul class="treeview-menu">
-                <li><a href="#"><i class="fa fa-check-circle-o"></i> Attendance/DTR </a></li>
-                <li><a href="#"><i class="fa fa-calendar"></i> Filed Leaves </a></li>
-                <li><a href="#"><i class="fa fa-money"></i> Loans </a></li>
-            </ul>
         </li>-->
     </ul>
 </section>
