--- a/templates/dashboard/page/student-record.phtml
+++ b/templates/dashboard/page/student-record.phtml
@@ -1,5 +1,5 @@
 <?php     
-    $this->headTitle('Student Master List');    
+    $this->headTitle('Student Master List');
 //    $this->headLink()->prependStylesheet('/assets/datatables/datatables.min.css');
 //    $this->inlineScript()
 //        ->prependFile('/assets/datatables/datatables.min.js')
@@ -26,7 +26,7 @@
                 </div>
                 
                 <div class="table-responsive">
-                    <table class="table table-bordered table-condensed table-hover table-striped">
+<!--                    <table class="table table-bordered table-condensed table-hover table-striped">
                         <thead>
                             <tr style="text-align: center;">
                                 <th>ID Number</th>
@@ -35,15 +35,14 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <?php foreach ($this->students() as $student) : ?>
-                            <tr onclick="window.location='<?php echo $this->url('student-record', ['id' => $student->getId()])?>'">
-                                <td style="width: 90px;"><?=$student->studentId()?></td>
-                                <td><?=$student->lastName().' - '.$student->firstName()?></td>
+                            <?php // $student = $this->students() ; ?>
+                            <tr>
+                                <td style="width: 90px;"></td>
+                                <td></td>
                                 <td></td>
                             </tr>
-                            <?php endforeach; ?>
                         </tbody>
-                    </table>
+                    </table>-->
                     <div class="clearfix"></div>
                 </div>
                 <div class="clearfix"></div>
