--- a/templates/student/admission.phtml
+++ b/templates/student/admission.phtml
@@ -1,6 +1,12 @@
 <?php 
     $this->headTitle('Student Admission');
     
+    $form = $this->studentForm();
+    $fname = $form->get('first_name');
+    $mname = $form->get('middle_name');
+    $lname = $form->get('last_name');
+    $form->prepare();
+    
 //    $this->headLink()->prependStylesheet($this->basePath('assets/datatables/datatables.min.css'));
 //    $this->inlineScript()
 //        ->prependFile($this->basePath('assets/datatables/datatables.min.js'))
@@ -18,33 +24,33 @@
 </section>
 <div class="divider"><br></div>       
 <section class="content">
-<?php
-    $form = $this->studentForm();
-    $fname = $form->get('first_name');
-    $mname = $form->get('middle_name');
-    $lname = $form->get('last_name');
-    $form->prepare();
-    echo $this->form()->openTag($form); 
-?> 
-    <fieldset>
-        <div class="form-group">
-            <?php echo $this->formLabel($fname) ?>
-            <?php echo $this->formElement($fname) ?>
-            <?php echo $this->formElementErrors()->render($fname, ['class' => 'help-block']) ?>
+    <div class="row">
+        <div class="col-md-8">
+            <?php echo $this->form()->openTag($form); ?> 
+                <fieldset>
+                    <div class="form-group">
+                        <?php echo $this->formLabel($fname) ?>
+                        <?php echo $this->formElement($fname) ?>
+                        <?php echo $this->formElementErrors()->render($fname, ['class' => 'help-block']) ?>
+                    </div>
+                    <div class="form-group">
+                        <?php echo $this->formLabel($mname) ?>
+                        <?php echo $this->formElement($mname) ?>
+                        <?php echo $this->formElementErrors()->render($mname, ['class' => 'help-block']) ?>
+                    </div>
+                    <div class="form-group">
+                        <?php echo $this->formLabel($lname) ?>
+                        <?php echo $this->formElement($lname) ?>
+                        <?php echo $this->formElementErrors()->render($lname, ['class' => 'help-block']) ?>
+                    </div>
+                    <div class="form-group">
+                        <?php echo $this->formElement($form->get('submit')); ?>
+                    </div>    
+                </fieldset>
+            <?php echo $this->form()->closeTag(); ?>
         </div>
-        <div class="form-group">
-            <?php echo $this->formLabel($mname) ?>
-            <?php echo $this->formElement($mname) ?>
-            <?php echo $this->formElementErrors()->render($mname, ['class' => 'help-block']) ?>
+        <div class="col-md-4">
+            
         </div>
-        <div class="form-group">
-            <?php echo $this->formLabel($lname) ?>
-            <?php echo $this->formElement($lname) ?>
-            <?php echo $this->formElementErrors()->render($lname, ['class' => 'help-block']) ?>
-        </div>
-        <div class="form-group">
-            <?php echo $this->formElement($form->get('submit')); ?>
-        </div>    
-    </fieldset>
-<?php echo $this->form()->closeTag(); ?>
+    </div>
 </section>
