--- a/module/Dashboard/templates/layout/partial/navigation/sidebar.phtml
+++ b/module/Dashboard/templates/layout/partial/navigation/sidebar.phtml
@@ -4,54 +4,54 @@
         <!-- DIVIDER -->
         <li class="header">REGISTRAR STAFF</li>
         <!-- END DIVIDER -->
-        <li><a href="<?php echo $this->url('student-admission');?>">
+        <li><a href="<?php echo $this->url('student.admission');?>">
             <i class="fa fa-user-plus"></i> <span>Admission</span></a>
         </li>
-        <li><a href="<?php echo $this->url('enrollment');?>">
+        <li><a href="<?php //echo $this->url('enrollment');?>">
             <i class="fa fa-check-square-o"></i> <span>Enrollment Assessment</span></a>
         </li>
         <!-- DIVIDER -->
         <li class="header">REGISTRAR OFFICE</li>
         <!-- END DIVIDER -->
-        <li><a href="<?php echo $this->url('student-list');?>">
+        <li><a href="<?php echo $this->url('student.masterlist');?>">
             <i class="fa fa-users"></i> <span>Student List</span></a>
         </li>
-        <li><a href="<?php echo $this->url('course-offering');?>">
+        <li><a href="<?php // echo $this->url('course-offering');?>">
             <i class="fa fa-list-alt"></i> <span>Course Offering</span></a>
         </li>
 <!--        <li><a href="<?php // echo $this->url('class-scheduling');?>">
             <i class="fa fa-calendar"></i> <span>Class Schedules</span></a>
         </li>-->
-        <li><a href="<?php echo $this->url('transcript');?>">
+        <li><a href="<?php // echo $this->url('transcript');?>">
             <i class="fa fa-certificate"></i> <span>Class Records</span></a>
         </li>        
         <!-- DIVIDER -->
         <li class="header">TESDA SETTINGS</li>
         <!-- END DIVIDER -->
-        <li><a href="<?php echo $this->url('tesda-report');?>">
+        <li><a href="<?php // echo $this->url('tesda-report');?>">
             <i class="fa fa-gear"></i> <span>TRACER Report</span></a>
         </li>
         
         
         <!-- Accounting Office Related Links -->
 <!--        <li class="header">ACCOUNTING OFFICE</li>        
-        <li><a href="<?php echo $this->url('enrollment-billing');?>">
+        <li><a href="<?php // echo $this->url('enrollment-billing');?>">
             <i class="fa fa-credit-card-alt"></i> <span>Enrollment Transactions</span></a>
         </li>-->
         
         
         <!-- Student Account Related Links -->
 <!--        <li class="header">STUDENT ACCOUNT</li>
-        <li><a href="<?php echo $this->url('student-profile');?>">
+        <li><a href="<?php // echo $this->url('student-profile');?>">
             <i class="fa fa-wrench"></i> <span>Profile Settings</span></a>
         </li>
-        <li><a href="<?php echo $this->url('student-passbook');?>">
+        <li><a href="<?php // echo $this->url('student-passbook');?>">
             <i class="fa fa-book"></i> <span>Passbook Transactions</span></a>
         </li>
-        <li><a href="<?php echo $this->url('student-classes');?>">
+        <li><a href="<?php // echo $this->url('student-classes');?>">
             <i class="fa fa-calendar"></i> <span>Class Schedule</span></a>
         </li>
-        <li><a href="<?php echo $this->url('student-grades');?>">
+        <li><a href="<?php // echo $this->url('student-grades');?>">
             <i class="fa fa-certificate"></i> <span>Evaluation of Grades</span></a>
         </li>-->
         
