--- a/module/Dashboard/templates/layout/partial/navigation/sidebar.phtml
+++ b/module/Dashboard/templates/layout/partial/navigation/sidebar.phtml
@@ -19,12 +19,12 @@
         <li><a href="<?php // echo $this->url('course-offering');?>">
             <i class="fa fa-list-alt"></i> <span>Course Offering</span></a>
         </li>
-<!--        <li><a href="<?php // echo $this->url('class-scheduling');?>">
+        <li><a href="<?php echo $this->url('class.schedule');?>">
             <i class="fa fa-calendar"></i> <span>Class Schedules</span></a>
-        </li>-->
-        <li><a href="<?php // echo $this->url('transcript');?>">
-            <i class="fa fa-certificate"></i> <span>Class Records</span></a>
-        </li>        
+        </li>
+        <!--<li><a href="<?php // echo $this->url('transcript');?>">-->
+            <!--<i class="fa fa-certificate"></i> <span>Class Records</span></a>-->
+        <!--</li>-->        
         <!-- DIVIDER -->
         <li class="header">TESDA SETTINGS</li>
         <!-- END DIVIDER -->
